# emergent-boids

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
analyzer/: .gitignore  ANALYZER-COMPLETE.md  JSONL_FORMAT.md  MULTIRATE_EXPORT.md  README.md  REPORT_GENERATOR.md  currentStats.json  evolution.csv  example_usage.py  generate_full_report.py  pyproject.toml  requirements.txt  stats.json
analyzer/datasets/evolution_1767033934488/: metadata.json  snapshots_1x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/datasets/evolution_1767034099147/: metadata.json  snapshots_100x.jsonl  snapshots_10x.jsonl  snapshots_1x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/datasets/evolution_1767034994965/: metadata.json  snapshots_100x.jsonl  snapshots_10x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/datasets/evolution_1767035676388/: metadata.json  snapshots_100x.jsonl  snapshots_10x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/datasets/evolution_1767036871703/: metadata.json  snapshots_100x.jsonl  snapshots_10x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/datasets/evolution_1767039613981/: metadata.json  snapshots_100x.jsonl  snapshots_10x.jsonl  snapshots_1x.jsonl  snapshots_3x.jsonl  snapshots_50x.jsonl  stats_current.json
analyzer/src/: README.md  __init__.py  evolution_analyzer.py
analyzer/src/analyzer/: __init__.py  (+1 more)
(+371 files in other folders)
