[project]
name = "analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.1",
    "nbstripout>=0.8.2",
]


# Configure the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure package discovery
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Tell Python where to find the packages
[tool.setuptools.packages.find]
where = ["src"]
